refs #99083: fixed news release filter and fixed filter functionality on mobile and desktop.

--- a/docroot/themes/custom/yukonca_glider/src/sass/pages/_basic.page.scss
+++ b/docroot/themes/custom/yukonca_glider/src/sass/pages/_basic.page.scss
@@ -3,7 +3,7 @@
         @apply text-[22px] leading-1.1 mt-3.75 pt-5;
     }
     
-    aside {
+    aside:not(:has(#block-exposedform-news)) {
         @include media-breakpoint-down(md) {
             @apply hidden;
         }
